Fix heading contrast

--- a/static/shared.css
+++ b/static/shared.css
@@ -12,7 +12,7 @@ h1 {
 	font-size: 2.5rem;
 	line-height: 1.2;
 	text-align: center;
-	color: #faa3a4;
+	color: #382929;
 }
 
 h1,
